# caligraph

./: .gitignore  Caligraph.cabal  README.md  stack.yaml
.github/workflows/: caligraph.yml
Caligraph/: Backend.hs  Breakpoint.hs  Calendar.hs  Headless.hs  LazyResult.hs  Lib.hs  PointerStore.hs  Possibly.hs  Rules.hs  Utils.hs
Caligraph/Backend/: Registered.hs  Types.hs  Utils.hs
Caligraph/CalDav/: Backend.hs
Caligraph/Cli/: AppState.hs  DayGrid.hs  DayWidget.hs  Main.hs  Types.hs  UnicodeJunction.hs
Caligraph/Config/: Calendars.hs  Command.hs  Defaults.hs  Main.hs  Types.hs
Caligraph/ICalendar/: Backend.hs
Caligraph/IcsFile/: Backend.hs  Export.hs  Parser.hs  Printer.hs  Types.hs
Caligraph/Plaintext/: Backend.hs
Caligraph/Remind/: Backend.hs  Parser.hs  Types.hs
Caligraph/RemindPipe/: Backend.hs  Parser.hs  Types.hs
app/: Main.hs
example-config/: birthdays.rem  calendars.ini  config.ini  example.rem  german-holidays.rem  keys.ini  plaintext.txt
test/: BackendIcsFile.hs  BackendRemind.hs  BackendUtils.hs  Config.hs  LazyResultSpec.hs  Spec.hs  Tester.hs  UnicodeJunctionSpec.hs  Utils.hs
