name:                Caligraph
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/t-wissmann/Caligraph#readme
license:             BSD3
--license-file:        LICENSE
author:              Thorsten Wißmann
maintainer:          edu@thorsten-wissmann.de
copyright:           GPL3
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Caligraph.Utils
    Caligraph.Lib
    Caligraph.Backend.Types
    Caligraph.Backend.Utils
    Caligraph.Backend.Registered
    Caligraph.Remind.Parser
    Caligraph.Remind.Types
    Caligraph.Remind.Backend
    Caligraph.RemindPipe.Parser
    Caligraph.RemindPipe.Types
    Caligraph.RemindPipe.Backend
    Caligraph.Calendar
    Caligraph.LazyResult
    Caligraph.Cli.Main
    Caligraph.Cli.DayGrid
    Caligraph.Cli.DayWidget
    Caligraph.Cli.Types
    Caligraph.Cli.UnicodeJunction
    Caligraph.Config.Main
    Caligraph.Config.Calendars
  build-depends:
      base
    , parsec
    , brick
    , time
    , vty
    , containers
    , microlens
    , microlens-th
    , microlens-mtl
    , array
    , mtl
    , contravariant
    , word-wrap
    , text
    , ini
    , directory
    , filepath
    , xdg-basedir
    , unordered-containers
  default-language:    Haskell2010

executable caligraph
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Caligraph
  default-language:    Haskell2010

test-suite Caligraph-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tester
                     , UnicodeJunctionSpec
                     , LazyResultSpec
  build-depends:       base
                     , Caligraph
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/t-wissmann/Caligraph
